Fixed issue where 'Create' text on create post modal was not centered on Safari

--- a/styles/home.css
+++ b/styles/home.css
@@ -229,6 +229,7 @@ body {
     margin-top: 20px;
     padding: 7px;
     width: 100%;
+    justify-content: center;
     font-size: 1rem;
     font-weight: bold;
     border: none;
